message added notes 01 and 02

--- a/_toc.yml
+++ b/_toc.yml
@@ -4,15 +4,13 @@
 format: jb-book
 root: intro
 parts:
-  - caption: Setting Up and Resources
-    numbered: True
+  - caption: Resources
+    numbered: false
     chapters:
     - file: 00_Resources/setup
-
-
-
-
-
-
-
-
+  - caption: Python Basics
+    numbered: true
+    chapters:
+    - file: 01_Intro/01_jupyter
+    - file: 01_Intro/02_variables
+    - file: 01_Intro/03_functions
