--- a/_config.yml
+++ b/_config.yml
@@ -1,31 +1,41 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: DS325 Applied Data Science
+title: DS256 Data Science Programming
 author: Eatai Roth, Gettysburg College
-logo: ds256_sticker.png
+copyright: 'Eatai Roth   2024'
+logo: _ds256_sticker.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
 execute:
   execute_notebooks: force
+  only_build_toc_files: true
+  allow_errors: true
 
 # Define the name of the latex output file for PDF builds
 latex:
   latex_documents:
-    targetname: book.tex
-
-# Add a bibtex file so that we can create citations
-bibtex_bibfiles:
-  - references.bib
+    targetname: ds256-notes.tex
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/executablebooks/jupyter-book  # Online location of your book
-  branch: master  # Which branch of the repository should be used when creating links (optional)
+  url: https://github.com/GettysburgDataScience/DS256-Notes  # Online location of your book
+  branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
-  use_issues_button: true
-  use_repository_button: true
+  use_issues_button: false
+  use_repository_button: false
+  use_multitoc_numbering: true
+  use_download_button: true
+  # html_sourcelink_suffix: .ipynb
+
+launch_buttons:
+  notebook_interfaces: "classic"
+  colab_url: "https://colab.research.google.com/"
+
+sphinx: 
+    extra_extensions:
+        - jupyterbook_patches
