--- a/_toc.yml
+++ b/_toc.yml
@@ -14,3 +14,7 @@ parts:
     - file: 01_Intro/01_jupyter
     - file: 01_Intro/02_variables
     - file: 01_Intro/03_functions
+  - caption: Assignments
+    numbered: false
+    chapters:
+    - file: 00_Assignments/ps01
