--- a/_toc.yml
+++ b/_toc.yml
@@ -14,6 +14,7 @@ parts:
     - file: 01_Intro/01_jupyter
     - file: 01_Intro/02_variables
     - file: 01_Intro/03_functions
+    - file: 01_Intro/04_conditionals
   - caption: Assignments
     numbered: false
     chapters:
