--- a/_toc.yml
+++ b/_toc.yml
@@ -19,6 +19,8 @@ parts:
       - file: 01_Intro/04_conditionals_practice
     - file: 01_Intro/05_lists
     - file: 01_Intro/06_loops
+    - file: 01_Intro/07_dictionaries
+
 
   - caption: Assignments
     numbered: false
