--- a/_toc.yml
+++ b/_toc.yml
@@ -33,3 +33,4 @@ parts:
     - file: 00_Assignments/ps01
     - file: 00_Assignments/ps02
     - file: 00_Assignments/ps03
+    - file: 00_Assignments/ps04
